# 3d-printer

./: HOW_A_3D_PRINTER_WORKS.md  README.md  openapi.yaml
docs/: crates.js  (+5 more)
firmware/crates/core/: Cargo.toml  build.rs
firmware/crates/core/src/: lib.rs
firmware/crates/core/src/printer/: mod.rs  panic_handler.rs
firmware/crates/core/src/printer/communication/: mod.rs  multi_thread.rs
firmware/crates/core/src/printer/communication/communicator/: mod.rs
firmware/crates/core/src/printer/communication/communicator/usb/: mod.rs
firmware/crates/core/src/printer/communication/communicator/wifi/: http_server.rs  mod.rs
firmware/crates/core/src/printer/communication/http/: mod.rs  resources.rs
firmware/crates/core/src/printer/communication/http/command/: mod.rs  sender_and_receiver.rs
firmware/crates/core/src/printer/communication/http/other/: g_code_history.rs  mod.rs  printer_state.rs
firmware/crates/core/src/printer/communication/http/request/: callbacks.rs  mod.rs
firmware/crates/core/src/printer/communication/ota/: mod.rs  update.rs
firmware/crates/core/src/printer/communication/security/: mod.rs
firmware/crates/core/src/printer/components/: config.rs  mod.rs  pauser.rs  peripherals.rs  print_process.rs  time.rs
firmware/crates/core/src/printer/components/drivers/: bl_touch.rs  button.rs  cartridge_heater.rs  fan.rs  mod.rs  servo_motor.rs  thermistor.rs
firmware/crates/core/src/printer/components/file_system/: bad_blocks.rs  mod.rs
firmware/crates/core/src/printer/components/g_code/: commands.rs  execute.rs  mod.rs  parser.rs
firmware/crates/core/src/printer/components/hal/: adc.rs  interrupt.rs  mod.rs  pwm.rs  timer.rs  uart.rs  watchdog.rs
firmware/crates/core/src/printer/components/mock/: adc.rs  input.rs  mod.rs  output.rs  peripherals.rs  pwm.rs  spi.rs  time.rs  timer.rs  uart.rs  watchdog.rs  z_axis_probe.rs
firmware/crates/core/src/printer/components/motion/: axes.rs  linear.rs  mod.rs  ticker.rs
firmware/crates/core/src/printer/components/temperature/: mod.rs  pid.rs
firmware/crates/core/src/utils/: bresenham.rs  mod.rs  mutex.rs
firmware/crates/core/src/utils/log_in_isr/: mod.rs
firmware/crates/core/src/utils/math/: mod.rs  number_ext.rs  percentage.rs  vectors.rs
firmware/crates/core/src/utils/measurement/: angle.rs  distance.rs  duration.rs  frequency.rs  mod.rs  temperature.rs
(+833 files in other folders)
