[package]
name = "firmware-core"
version = "0.1.0"
edition = "2021"
description = "Platform-indipendent code for the 3D printer's firmware"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-rc.1"
embedded-svc = { version = "0.26", features = ["nightly"] }

pid_control = "0.7.2"

ringbuffer = "0.15"

enumset = "1.1.2"

[build-dependencies]
syn = { version = "2.0", features = ["parsing", "full", "printing"] }
quote = "1"