[package]
name = "firmware-core"
version = "0.1.0"
edition = "2021"
description = "Platform-indipendent code for the 3D printer's firmware"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-rc.1"
embedded-svc = { version = "0.26", features = ["nightly"] }

pid_control = "0.7.2"

ringbuffer = "0.15"

cassette = "0.2.3"

strum = { version = "0.25", features = ["derive"] }
enumset = "1.1.2"

usb-device = { version = "0.2.9", optional = true }
usbd-serial = { version = "0.1.1", optional = true }

[build-dependencies]
syn = { version = "2.0", features = ["parsing", "full", "printing"] }
quote = "1"