[package]
name = "firmware-core"
version = "0.1.0"
edition = "2021"
description = "Platform-indipendent code for the 3D printer's firmware"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
usb = ["dep:usb-device", "dep:usbd-serial"]

[dependencies]
embedded-hal = "1.0.0-rc.1"
embedded-svc = { version = "0.26", features = ["nightly"] }
embedded-io = "0.6"

log = { version = "0.4.17", default-features = false }

pid_control = "0.7.2"

ringbuffer = "0.15"

cassette = "0.2.3"

strum = { version = "0.25", features = ["derive"] }
enumset = "1.1.2"

serde = { version = "1.0", features = ["derive"] }
serde-json-core = "0.5.1"

usb-device = { version = "0.2.9", optional = true }
usbd-serial = { version = "0.1.1", optional = true }

argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

[build-dependencies]
syn = { version = "2.0", features = ["parsing", "full", "printing"] }
quote = "1"